# teachLink_contract

./: .clippy.toml  .dockerignore  .env  .gitignore  .jscpd.json  .pre-commit-config.yaml  .rustfmt.toml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPENDENCY_INJECTION_PATTERN.md  DEVELOPER_EXPERIENCE.md  DISASTER_RECOVERY_PROCEDURES.md  Dockerfile  ENHANCED_INSURANCE_SUMMARY.md  FAILURE_MODES.md  GLOSSARY.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_RESPONSE.md  INDEXER_SUMMARY.md  INSURANCE_CURRENT_STATUS.md  INSURANCE_STATUS.md  ISSUE_105_IMPLEMENTATION.md  ISSUE_156_EVENT_EMISSION_IMPLEMENTATION.md  LICENSE  LOGGING_STANDARDS.md  OBSERVABILITY.md  PLAN.md  PRE_COMMIT_QUICK_START.md  PR_DESCRIPTION.md  PR_DESCRIPTION_DISABLED_TESTS_FIX.md  PR_DESCRIPTION_INTEGRATION_TESTS.md  PR_DESCRIPTION_PROPERTY_BASED_TESTING.md  PR_DESCRIPTION_SCALABILITY.md  PR_VALIDATION.md  (+25 more)
contracts/community/: Cargo.toml
contracts/community/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: analytics.rs  automation.rs  compliance.rs  cross_chain.rs  curation.rs  delegation.rs  disputes.rs  events.rs  governance.rs  insurance.rs  lib.rs  mock_token.rs  quadratic.rs  simulation.rs  staking.rs  storage.rs  types.rs
contracts/governance/test_snapshots/: test_allocate_qv_credits.1.json  test_analytics_tracking.1.json  test_cancel_proposal.1.json  test_cannot_self_delegate.1.json  test_cast_quadratic_vote.1.json  test_cast_vote.1.json  test_cast_vote_with_delegation.1.json  test_cast_vote_with_power.1.json  test_create_proposal.1.json  test_create_proposal_insufficient_balance.1.json  test_create_simulation.1.json  test_delegate_vote.1.json  test_delegated_voting_power.1.json  test_double_vote.1.json  test_effective_delegate_chain.1.json  test_execute_proposal.1.json  test_file_and_resolve_appeal.1.json  test_file_dispute.1.json  test_finalize_and_execute_proposal.1.json  test_finalize_proposal_failed.1.json  test_finalize_proposal_passed.1.json  test_full_governance_flow_with_delegation_and_staking.1.json  test_governance_setup_flow.1.json  test_initialize_governance.1.json  test_initialize_staking.1.json  test_mock_token_operations.1.json  test_predict_outcome.1.json  test_proposal_fails_majority_against.1.json  test_proposal_passes_with_quorum.1.json  test_resolve_dispute.1.json  test_revoke_delegation.1.json  test_stake_tokens.1.json  test_staking_amplifies_voting_power.1.json  test_token_instances_independent.1.json  test_unstake_after_lock.1.json  test_update_advanced_config.1.json  test_update_config.1.json
contracts/governance/tests/: test_governance.rs
contracts/insurance/: API_REFERENCE.md  Cargo.toml  README.md  build_output.txt
contracts/insurance/src/: content_protection.rs  di.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/teachlink/: Cargo.toml  ERROR_HANDLING_GUIDE.md  EVENT_SCHEMA.md  build_out.txt  error_log.txt
contracts/teachlink/src/: access_control.rs  access_logger.rs  advanced_reputation.rs  analytics.rs  appointment_escrow.rs  arbitration.rs  assessment.rs  atomic_swap.rs  audit.rs  backup.rs  bft_consensus.rs  bridge.rs  bulk_limits.rs  config.rs  constants.rs  content_nft.rs  content_quality.rs  cross_chain_tests.rs  data_access_audit.rs  dos_protection.rs  emergency.rs  errors.rs  escrow.rs  escrow_analytics.rs  event_query.rs  event_tests.rs  events.rs  fractional.rs  governance.rs  insurance.rs  interface_versioning.rs  interfaces.rs  learning_paths.rs  ledger_time.rs  lib.rs  lib.rs.backup  licensing.rs  liquidity.rs  marketplace.rs  message_passing.rs  (+35 more)
contracts/teachlink/test_snapshots/: gas_bench_add_supported_chain.1.json  gas_bench_add_validator.1.json  gas_bench_cache_compute.1.json  gas_bench_cache_hit.1.json  gas_bench_create_audit_record.1.json  gas_bench_initialize.1.json  gas_bench_mint_content_token.1.json  (+148 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODING_STANDARDS_IMPLEMENTATION.md  CODING_STANDARDS_QUICK_REFERENCE.md  COMPOSABILITY_GUIDE.md  CROSS_CHAIN_INTEGRATION_TESTS.md  Cargo.toml  DESIGN_PATTERNS.md  DEVELOPER_TRAINING.md  DOCUMENTATION_STANDARDS.md  FLOW_DIAGRAMS.md  GAS_OPTIMIZATION.md  LOGGING_STRATEGY.md  MODULE_INTERFACE_STANDARDS.md  NAMING_CONVENTIONS.md  PERFORMANCE_TESTING.md  PRE_COMMIT_HOOKS_GUIDE.md  PROPERTY_BASED_TESTING.md  RUSTFMT_GUIDE.md  api-testing.md  data_structure_selection.md  error-codes.md  logger.service.ts  search.json  security-test-cases.md  tokenization-module.md
docs/adr/: 0001-soroban-rust-smart-contracts.md  0002-tokenized-learning-rewards.md  0003-cross-chain-bridge-design.md  0004-indexer-technology-selection.m  0005-observability-stack.md  README.md  template.md
docs/algorithms/: README.md  bft-consensus.md  validator-slashing.md
docs/faq/: README.md
docs/governance/: COMMUNITY_GUIDELINES.md  GOVERNANCE.md  HALL_OF_FAME.md  ISSUE_TRIAGE.md  README.md  ROADMAP.md
docs/i18n/: README.md
docs/interactive/: Cargo.toml  README.md
docs/issues/: 327-time-based-test-coverage.md  328-contract-upgrade-testing.md  329-fuzzing-tests.md  334-benchmark-test-suite.md
docs/knowledge-base/: README.md
docs/src/: main.rs
docs/static/: index.html
docs/tutorials/: README.md
docs/versions/: CONTRACT_INTERFACE_VERSIONING.md  README.md
testing/: Cargo.toml
testing/analytics/: README.md  coverage_analyzer.rs
testing/automated/: test_generator.rs
testing/environments/: test_env.rs
testing/fixtures/: test_data.rs
testing/integration/: atomic_swap_integration.rs  bridge_integration.rs  failure_scenarios.rs  lib.rs  message_passing_integration.rs  mock_chains.rs  mod.rs  multichain_integration.rs  test_full_flow.rs  test_utils.rs
testing/load/: load_test_config.toml
testing/performance/: benchmark_runner.rs
testing/property/: property_tests.rs
testing/quality/: complexity_analyzer.rs  metrics_collector.rs
testing/scripts/: generate_report.sh  run_all_tests.sh
testing/security/: vulnerability_scanner.rs
testing/src/: lib.rs
(+417 files in other folders)
