[workspace]
resolver = "2"
members = [
  "contracts/teachlink",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/rinafcode/teachLink_contract"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "20.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -2 }

[workspace.lints.rust]
unsafe_code = "deny"
