[workspace]
resolver = "2"
members = [
  "contracts/teachlink",
  "contracts/documentation",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/rinafcode/teachLink_contract"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "25.3.0"

# Coverage and testing dependencies
cargo-llvm-cov = "0.6"
tarpaulin = "0.27"
rust-code-analysis = "0.0.24"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.lints.clippy]
all = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -2 }

[workspace.lints.rust]
unsafe_code = "deny"
nonstandard_style = "deny"
