[package]
name = "teachlink-docs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soroban-sdk = { workspace = true, features = ["testutils"] }
teachlink-contract = { path = "../contracts/teachlink" }

[lints]
workspace = true
