[package]
name = "teachlink-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "25.0.0-rc.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
mockall = "0.11"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
quickcheck = "1.0"
tokio-test = "0.4"

[[bench]]
name = "bridge_operations"
harness = false

[[bench]]
name = "escrow_operations"
harness = false
