[package]
name = "community-contract"
version = "0.1.0"
edition = "2021"
authors = ["TeachLink"]
description = "Advanced Community Support and Help System for TeachLink"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.3.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
