[package]
name = "teachlink-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
# Feature flag for tests that reference extended contract APIs not yet fully implemented
extended-api-tests = []

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"
proptest-derive = "0.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
test-strategy = "0.3"
rand = "0.9"

# Tests requiring extended contract APIs (not yet implemented)
[[test]]
name = "test_bft_consensus_comprehensive"
path = "tests/test_bft_consensus_comprehensive.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "test_slashing_comprehensive"
path = "tests/test_slashing_comprehensive.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "test_emergency_comprehensive"
path = "tests/test_emergency_comprehensive.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "test_cross_chain_integration"
path = "tests/test_cross_chain_integration.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "property_based_tests"
path = "tests/property_based_tests.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "test_bridge_comprehensive"
path = "tests/test_bridge_comprehensive.rs"
required-features = ["extended-api-tests"]

[[test]]
name = "test_integration_comprehensive"
path = "tests/test_integration_comprehensive.rs"
required-features = ["extended-api-tests"]

[lints]
workspace = true
