[package]
name = "teachlink-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"
proptest-derive = "0.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[lints]
workspace = true
