[package]
name = "interactive-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
soroban-sdk = "25.0.0-rc.2"
soroban-env-host = "25.0.0-rc.2"
soroban-ledger-snapshot = "25.0.0-rc.2"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
